--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -1,9 +1,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/menu_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/menu_settings"/>
+        android:id="@+id/map_button_id"
+        android:title="@string/app_name"
+        android:icon="@drawable/ic_map"
+        android:showAsAction="always"/>
+    <item 
+        android:id="@+id/people_button_id"
+        android:title="@string/people_label"
+        android:icon="@drawable/ic_people"
+        android:showAsAction="always"/>   
+    
+    <item 
+        android:id="@+id/settings_id"
+        android:title="@string/setting_label"
+        android:icon="@drawable/ic_settings"
+        android:showAsAction="always"/>
 
-</menu>
+</menu>	
