--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -15,5 +15,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/register_button"
         android:text="@string/register_button_label"/>
+    <TextView 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/error_view"/>
 
 </LinearLayout>
