--- a/res/layout/map_layout.xml
+++ b/res/layout/map_layout.xml
@@ -2,11 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
->
+    android:layout_height="fill_parent">
 
-    <EditText 
-        android:id="@+id/point_latitude" 
+    <Button 
+        android:id="@+id/simulate_move" 
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dip"
