--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -8,11 +8,29 @@
         <item>1 hour</item>
     </string-array>
     
-    <integer-array name="pref_interval_values">
+    <string-array name="pref_interval_values">
         <item>60000</item>
         <item>300000</item>
         <item>600000</item>
         <item>1200000</item>
         <item>3600000</item>
-    </integer-array>
+    </string-array>
+    
+    <string-array name="pref_distance_entries">
+        <item>20 meters</item>
+        <item>50 meters</item>
+        <item>100 meters</item>
+        <item>200 meters</item>
+        <item>500 meters</item>
+    </string-array>
+    
+    <string-array name="pref_distance_values">
+        <item>20</item>
+        <item>50</item>
+        <item>100</item>
+        <item>200</item>
+        <item>500</item>
+    </string-array>
+    
+    
 </resources>
