--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -2,17 +2,36 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <CheckBoxPreference
-        android:defaultValue="true"
+        android:defaultValue="false"
         android:key="pref_key_trace"
         android:title="@string/pref_trace_label" />
-
-    
 
     <EditTextPreference
         android:defaultValue=""
         android:key="pref_key_username"
         android:title="@string/pref_username_label" />
 
+    <PreferenceCategory 
+        android:key="pref_key_limits_cat"
+        android:title="@string/pref_limits_cat_label">
+        <ListPreference
+            android:key="pref_key_distance_limit"
+            android:title="@string/pref_distance_limit_label"
+            android:dialogTitle="@string/pref_distance_limit_label"
+            android:entries="@array/pref_distance_entries"
+            android:entryValues="@array/pref_distance_values"
+            android:defaultValue="@string/pref_distance_default"
+            />
+        <ListPreference
+            android:key="pref_key_interval_limit"
+            android:title="@string/pref_interval_label"
+            android:dialogTitle="@string/pref_interval_label"
+            android:entries="@array/pref_interval_entries"
+            android:entryValues="@array/pref_interval_values"
+            android:defaultValue="@string/pref_interval_default"/>
+    </PreferenceCategory>
+    
+    
     <PreferenceCategory
         android:key="pref_key_clear_data_cat"
         android:title="@string/pref_clear_data_cat_label" >
@@ -26,5 +45,9 @@
             android:key="pref_key_clear_remote_data"
             android:title="@string/pref_clear_remote_data_label" />
     </PreferenceCategory>
+    
+    <Preference 
+        android:key="pref_key_unregistrer"
+        android:title="@string/register_button_label"/>
 
 </PreferenceScreen>
