--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -12,9 +12,15 @@
         android:showAsAction="always"/>   
     
     <item 
+        android:id="@+id/log_button_id"
+        android:title="@string/log_label"
+        android:icon="@drawable/ic_log"
+        android:showAsAction="always"/>
+    <item 
         android:id="@+id/settings_id"
         android:title="@string/setting_label"
         android:icon="@drawable/ic_settings"
         android:showAsAction="always"/>
+    />
 
 </menu>	
