--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"  
+    >
 
-    <CheckBoxPreference
+	<PreferenceCategory 
+        android:key="pref_key_settings_cat"
+        android:title="@string/pref_settings_cat_label">
+        <CheckBoxPreference
         android:defaultValue="false"
         android:key="pref_key_trace"
         android:title="@string/pref_trace_label" />
-
-    
-
-    <PreferenceCategory 
-        android:key="pref_key_limits_cat"
-        android:title="@string/pref_limits_cat_label">
         <ListPreference
             android:key="pref_key_distance_limit"
             android:title="@string/pref_distance_limit_label"
@@ -26,12 +24,38 @@
             android:entries="@array/pref_interval_entries"
             android:entryValues="@array/pref_interval_values"
             android:defaultValue="@string/pref_interval_default"/>
+        <ListPreference
+            android:key="pref_key_map_limit"
+            android:title="@string/pref_map_label"
+            android:dialogTitle="@string/pref_map_label"
+            android:entries="@array/pref_map_entries"
+            android:entryValues="@array/pref_map_values"
+            android:defaultValue="@string/pref_map_default"/>
+        <Preference 
+        android:key="pref_key_unregistrer"
+        android:title="@string/pref_unregister_label"/>
+		
     </PreferenceCategory>
-    
-    <EditTextPreference
+    <PreferenceCategory 
+        android:key="pref_key_customize_cat"
+        android:title="@string/pref_customize_cat_label">
+        <EditTextPreference
         android:defaultValue=""
         android:key="pref_key_username"
         android:title="@string/pref_username_label" />
+        <ListPreference
+            android:key="pref_key_color"
+            android:title="@string/pref_color_label"
+            android:dialogTitle="@string/pref_color_label"
+            android:entries="@array/pref_color_entries"
+            android:entryValues="@array/pref_color_values"
+            android:defaultValue="@string/pref_color_default"
+            />
+        <Preference 
+            android:key="pref_key_random_color"
+            android:title="@string/pref_random_color_label"/>
+    </PreferenceCategory>
+
     <PreferenceCategory
         android:key="pref_key_clear_data_cat"
         android:title="@string/pref_clear_data_cat_label" >
@@ -45,9 +69,4 @@
             android:key="pref_key_clear_remote_data"
             android:title="@string/pref_clear_remote_data_label" />
     </PreferenceCategory>
-    
-    <Preference 
-        android:key="pref_key_unregistrer"
-        android:title="@string/register_button_label"/>
-
 </PreferenceScreen>
